force-app/main/default/objects/Free_Class__c/Free_Class__c.object-meta.xml
<CustomObject>
    <description>Custom object used to capture information on free classes that are offered in various places. Learn to swim classes at camp is a good example.</description>
    <label>Learn to Swim/Safety Outreach</label>
    <nameField>
        <displayFormat>FC - {00000000}</displayFormat>
        <label>Class ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learn to Swim/Safety Outreach</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>