force-app/main/default/objects/Free_Class__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adult Swim – Fitness Swimming</fullName>
            </value>
            <value>
                <fullName>Adult Swim – Learning and Refining Swim Strokes</fullName>
            </value>
            <value>
                <fullName>Adult Swim – Learning the Basics</fullName>
            </value>
            <value>
                <fullName>General Water Safety</fullName>
            </value>
            <value>
                <fullName>Home Pool Safety</fullName>
            </value>
            <value>
                <fullName>Learn-to-Swim Level 1 – Introduction to Water Skills</fullName>
            </value>
            <value>
                <fullName>Learn-to-Swim Level 2 – Fundamental Aquatic Skills</fullName>
            </value>
            <value>
                <fullName>Learn-to-Swim Level 3 – Stroke Development</fullName>
            </value>
            <value>
                <fullName>Learn-to-Swim Level 4 – Stroke Improvement</fullName>
            </value>
            <value>
                <fullName>Learn-to-Swim Level 5 – Stroke Refinement</fullName>
            </value>
            <value>
                <fullName>Learn-to-Swim Level 6 – Skill Proficiency – Fitness Swimmer</fullName>
            </value>
            <value>
                <fullName>Learn-to-Swim Level 6 – Skill Proficiency – Fundamentals of Diving</fullName>
            </value>
            <value>
                <fullName>Learn-to-Swim Level 6 – Skill Proficiency – Personal Water Safety</fullName>
            </value>
            <value>
                <fullName>Parent and Child Aquatics Level 1</fullName>
            </value>
            <value>
                <fullName>Parent and Child Aquatics Level 2</fullName>
            </value>
            <value>
                <fullName>Parent Orientation to Swim Lessons</fullName>
            </value>
            <value>
                <fullName>Preschool Aquatics Level 1</fullName>
            </value>
            <value>
                <fullName>Preschool Aquatics Level 2</fullName>
            </value>
            <value>
                <fullName>Preschool Aquatics Level 3</fullName>
            </value>
            <value>
                <fullName>Private Swim Lesson</fullName>
            </value>
            <value>
                <fullName>Rip Current Safety</fullName>
            </value>
            <value>
                <fullName>Sun Safety</fullName>
            </value>
            <value>
                <fullName>WHALE Tales – Longfellows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>