force-app/main/default/objects/Free_Class__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Learn to Swim/Safety Outreach (Facility Name)</relationshipLabel>
    <relationshipName>Learn_to_Swim_Safety_Outreach</relationshipName>
    <type>Lookup</type>
</CustomField>