force-app/main/default/objects/Free_Class__c/fields/of_Students_not_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>of_Students_not_Evaluated__c</fullName>
    <inlineHelpText>Please enter the number of students that took the class and weren&#39;t evaluated.</inlineHelpText>
    <label># of Students not Evaluated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>