force-app/main/default/objects/Free_Class__c/fields/of_Unsuccessful_Students__c.field-meta.xml
<CustomField>
    <fullName>of_Unsuccessful_Students__c</fullName>
    <inlineHelpText>Please enter the number of students that took the class and weren&#39;t successful.</inlineHelpText>
    <label># of Unsuccessful Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>