force-app/main/default/objects/Free_Class__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Organization or Facility Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility Account, Organization Account, SB Organization Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Learn to Swim/Safety Outreach (Organization)</relationshipLabel>
    <relationshipName>Free_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>