force-app/main/default/objects/Free_Class__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>General Water Safety</fullName>
            </value>
            <value>
                <fullName>Hands-only CPR (course code: HSSCPR701 r.2018</fullName>
            </value>
            <value>
                <fullName>Home Pool Safety</fullName>
            </value>
            <value>
                <fullName>Longfellow’s WHALE Tales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rip Current Safety</fullName>
            </value>
            <value>
                <fullName>Sun Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>