force-app/main/default/objects/Free_Class__c/fields/Total_Students_Taught__c.field-meta.xml
<CustomField>
    <fullName>Total_Students_Taught__c</fullName>
    <inlineHelpText>This total should include: Successful, Unsuccessful and Not Evaluated.</inlineHelpText>
    <label>Total Students Taught</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>