force-app/main/default/objects/Free_Class__c/recordTypes/Learn_to_Swim_Class.recordType-meta.xml
<RecordType>
    <fullName>Learn_to_Swim_Class</fullName>
    <active>true</active>
    <description>Record type to capture Learn to Swim Classes</description>
    <label>Learn to Swim Class</label>
</RecordType>