force-app/main/default/objects/Free_Class__c/recordTypes/Safety_Outreach.recordType-meta.xml
<RecordType>
    <fullName>Safety_Outreach</fullName>
    <active>true</active>
    <description>Record type to capture Safety Outreach efforts.</description>
    <label>Safety Outreach</label>
</RecordType>