force-app/main/default/objects/Free_Class__c/validationRules/Other_Topic_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Topic_Required</fullName>
    <active>true</active>
    <description>Validation Rule to enforce that if the topic = other than Other field needs to be filled out.</description>
    <errorConditionFormula>ISPICKVAL( Topic__c, &quot;Other&quot;)&amp;&amp;
ISBLANK (Other_Topic__c )</errorConditionFormula>
    <errorDisplayField>Other_Topic__c</errorDisplayField>
    <errorMessage>You&#39;ve selected Other for Topic, please add the topic in this Other field.</errorMessage>
</ValidationRule>